--- a/views/chat-views/not-allowed.ejs
+++ b/views/chat-views/not-allowed.ejs
@@ -1,5 +1,9 @@
-<h6> You Do Not Have Access To This Discussion Thread. </h6>
+<div class="views-body">
 
-<p>
-  (Please change your Favorite Coding Style if you wish to enter)
-</p>
+  <h6> You Do Not Have Access To This Discussion Thread. </h6>
+
+  <p>
+    (Please change your Favorite Coding Style if you wish to enter)
+  </p>
+
+</div>
