--- a/views/code-views/code-details-page.ejs
+++ b/views/code-views/code-details-page.ejs
@@ -1,15 +1,19 @@
-<h2> Code Details </h2>
+<div class="views-body">
 
-<a href="/code/new"> Add a code </a>
+  <h2> Code Details </h2>
 
-<ul>
+  <a href="/code/new"> Add a code </a>
+
+  <ul>
 
     <li>
       <h3> Code Name: <%= codeDetails.codeName %> </h3>
       <h4> Author: <%= codeDetails.codeAuthor %> </h4>
       <h4> Language: <%= codeDetails.codeLanguage %> </h5>
-      <p> description: <%= codeDetails.codeDescription %> </p>
-      <a href="<%= codeDetails.codeLink %>"> View Code </a>
-    </li>
-  
-</ul>
+        <p> description: <%= codeDetails.codeDescription %> </p>
+        <a href="<%= codeDetails.codeLink %>"> View Code </a>
+      </li>
+
+    </ul>
+
+</div>
