--- a/views/code-views/code-input-page.ejs
+++ b/views/code-views/code-input-page.ejs
@@ -1,28 +1,32 @@
-<h2> Code Input </h2>
+<div class="views-body">
+
+  <h2> Code Input </h2>
 
 
 
-<form id="form" action="/code-input" method="post">
+  <form id="form" action="/code-input" method="post">
 
-  <label for="codeName-input">  </label>
-  <input id="codeName-input" type="text" name="codeNameInput" placeholder="Name Your code" />
-  <br />
+    <label for="codeName-input">  </label>
+    <input id="codeName-input" type="text" name="codeNameInput" placeholder="Name Your code" />
+    <br />
 
-  <label for="codeAuthor-input">  </label>
-  <input id="codeAuthor-input" type="text" name="codeAuthorInput" placeholder="Author of the code" />
-  <br />
+    <label for="codeAuthor-input">  </label>
+    <input id="codeAuthor-input" type="text" name="codeAuthorInput" placeholder="Author of the code" />
+    <br />
 
-  <label for="codeLanguage-input">  </label>
-  <input id="codeLanguage-input" type="text" name="codeLanguageInput" placeholder="What language is your code" />
-  <br />
+    <label for="codeLanguage-input">  </label>
+    <input id="codeLanguage-input" type="text" name="codeLanguageInput" placeholder="What language is your code" />
+    <br />
 
-  <label for="codeDescription-input">  </label>
-  <textarea id="codeDescription-input" type="text" name="codeDescriptionInput" rows="3" cols="40" placeholder="Description of your code"></textarea>
-  <br />
+    <label for="codeDescription-input">  </label>
+    <textarea id="codeDescription-input" type="text" name="codeDescriptionInput" rows="3" cols="40" placeholder="Description of your code"></textarea>
+    <br />
 
-  <label for="codeLink-input">  </label>
-  <input id="codeLink-input" type="text" name="codeLinkInput" placeholder="URL Link to your code" />
-  <br /><br />
+    <label for="codeLink-input">  </label>
+    <input id="codeLink-input" type="text" name="codeLinkInput" placeholder="URL Link to your code" />
+    <br /><br />
 
-<button> Submit </button>
-</form>
+    <button> Submit </button>
+  </form>
+
+</div>
