--- a/views/user-views/signup-page.ejs
+++ b/views/user-views/signup-page.ejs
@@ -1,87 +1,90 @@
+<div class="views-body">
 
-<h2> Sign Up </h2>
+  <h2> Sign Up </h2>
 
-<% if (currentUser) { %>
+  <% if (currentUser) { %>
 
     <a href="/settings"> Edit Profile </a>
     <a href="/logout"> Log Out </a>
     <br />
 
     <b> <%= currentUser.userName %> </b>
-  <% } else { %>
+    <% } else { %>
 
-    <a href="/"> Home </a>
+      <a href="/"> Home </a>
 
-  <% } %>
+      <% } %>
 
-<% if (typeof errorMessage !== "undefined") { %>
-  <p class="error-message"> <%= errorMessage %> </p>
-<% } %>
-
-
-<form id="form" method="post" action="/process-signup">
-
-  <label for="full-name-input"></label>
-  <input id="full-name-input" type="text" placeholder="Full Name" name="signupFullName" />
-  <br />
+      <% if (typeof errorMessage !== "undefined") { %>
+        <p class="error-message"> <%= errorMessage %> </p>
+        <% } %>
 
 
-  <label for="email-input"></label>
-  <input id="email-input" type="email" placeholder=" Email Address" name="signupEmail" />
-  <br />
+        <form id="form" method="post" action="/process-signup">
+
+          <label for="full-name-input"></label>
+          <input id="full-name-input" type="text" placeholder="Full Name" name="signupFullName" />
+          <br />
 
 
-  <label for="username-input"></label>
-  <input id="username-input" type="text" placeholder="Username" name="signupUsername" />
-  <br />
-
-  <label for="user-avatar-input"></label>
-  <input id="user-avatar-input" type="text" placeholder="Avatar URL" name="signupAvatar" />
-  <br />
-
-  <label for="fav-languages-input"></label>
-
-  <div id="fav-languages-input">
-    <p><strong>Which Coding Styles are your favorite (Select 3)</strong></p>
-
-        <input id="CssCheckbox" class="single-checkbox"type="checkbox" name="signupFavLanguages" value="CSS" />CSS<br>
-
-        <input id="JavascriptCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Javascript"  />Javascript<br>
-
-        <input id="RubyCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Ruby" />Ruby<br>
-
-        <input id="PythonCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Python" />Python<br>
-
-        <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Node" />Node<br>
-
-        <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Mongo" />Mongo<br>
-
-        <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Angular" />Angular<br>
-
-  </div>
-  <br />
+          <label for="email-input"></label>
+          <input id="email-input" type="email" placeholder=" Email Address" name="signupEmail" />
+          <br />
 
 
-  <label for="password-input"></label>
-  <input id="password-input" type="password" placeholder="Password" name="signupPassword" />
-  <br />
-  <br  />
+          <label for="username-input"></label>
+          <input id="username-input" type="text" placeholder="Username" name="signupUsername" />
+          <br />
 
-  <button> Submit </button>
-  <br />
-  <br />
-  <br />
+          <label for="user-avatar-input"></label>
+          <input id="user-avatar-input" type="text" placeholder="Avatar URL" name="signupAvatar" />
+          <br />
 
-  <div class="login-logo-div">
-    <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
-    <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
-    <br />
-  </div>
+          <label for="fav-languages-input"></label>
 
-  <br />
+          <div id="fav-languages-input">
+            <p><strong>Which Coding Styles are your favorite (Select 3)</strong></p>
 
-  <p>
-    Already have an account?
-    <a href="/login"> Log In </a>
-  </p>
-</form>
+            <input id="CssCheckbox" class="single-checkbox"type="checkbox" name="signupFavLanguages" value="CSS" />CSS<br>
+
+            <input id="JavascriptCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Javascript"  />Javascript<br>
+
+            <input id="RubyCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Ruby" />Ruby<br>
+
+            <input id="PythonCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Python" />Python<br>
+
+            <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Node" />Node<br>
+
+            <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Mongo" />Mongo<br>
+
+            <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Angular" />Angular<br>
+
+          </div>
+          <br />
+
+
+          <label for="password-input"></label>
+          <input id="password-input" type="password" placeholder="Password" name="signupPassword" />
+          <br />
+          <br  />
+
+          <button> Submit </button>
+          <br />
+          <br />
+          <br />
+
+          <div class="login-logo-div">
+            <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
+            <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
+            <br />
+          </div>
+
+          <br />
+
+          <p>
+            Already have an account?
+            <a href="/login"> Log In </a>
+          </p>
+        </form>
+
+</div>
