--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 10px 30px 0 30px;
+  /* padding: 10px 30px 0 30px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: azure;
   width: 100vw;
@@ -116,8 +116,12 @@ p {
 }
 
 #nav-image {
-  height: 75px;
-  width: 75px;
+  height: 2.5em;
+  width: 2.5em;
+}
+
+.edit-button {
+  color: black;
 }
 
 
@@ -164,6 +168,26 @@ p {
   background-size: cover;
 }
 
+.current-user-info-nav {
+  width: 16vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-bar, h2 {
+  font-size: 1.5vw;
+  margin-top: 1em;
+}
+
+.nav-bar-links {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-bottom: 0.5em;
+  justify-content: space-around;
+  width: 25em;
+}
 
 .generalBackground {
   background-image: url("../images/backgroundColorGeneral.jpeg");
@@ -177,10 +201,31 @@ p {
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
+.views-body {
+  padding: 0 5em;
+}
+
+.logged-out-nav {
+  display: flex;
+  align-items: flex-end;
+  height: 3em;
+  /* background-color: steelblue; */
+  padding: 0 4vw;
+  margin: 0 auto;
+}
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  height: 115px;
+  height: 3em;
+  /* background-color: steelblue; */
+  padding: 0 4vw;
+  margin: 0 auto;
+}
+
+hr {
+  border: 0.5px solid darkblue;
+  margin: 0;
 }
 
 .logos {
