--- a/views/user-views/login-page.ejs
+++ b/views/user-views/login-page.ejs
@@ -1,47 +1,50 @@
+<div class="views-body">
 
-<h2> Log In </h2>
+  <h2> Log In </h2>
 
-<% if (currentUser) { %>
+  <% if (currentUser) { %>
 
     <a href="/settings"> Edit Profile </a>
     <a href="/logout"> Log Out </a>
     <br />
 
     <b> <%= currentUser.userName %> </b>
-  <% } else { %>
+    <% } else { %>
 
-    <a href="/"> Home </a>
+      <a href="/"> Home </a>
 
-  <% } %>
+      <% } %>
 
-<% if (typeof errorMessage !== "undefined") { %>
-  <p class="error-message"> <%= errorMessage %> </p>
-<% } %>
+      <% if (typeof errorMessage !== "undefined") { %>
+        <p class="error-message"> <%= errorMessage %> </p>
+        <% } %>
 
-<form id="form" method="post" action="/process-login">
-  <label for="email-input"> Email </label>
-  <input id="email-input" type="email" placeholder="e.g. tyrion@casterly.rock" name="LoginEmail" />
-  <br />
-  <br />
+        <form id="form" method="post" action="/process-login">
+          <label for="email-input"> Email </label>
+          <input id="email-input" type="email" placeholder="e.g. tyrion@casterly.rock" name="LoginEmail" />
+          <br />
+          <br />
 
-  <label for="password-input"> Password </label>
-  <input id="passwrod-input" type="password" name="LoginPassword" />
-  <br />
-  <br />
+          <label for="password-input"> Password </label>
+          <input id="passwrod-input" type="password" name="LoginPassword" />
+          <br />
+          <br />
 
-  <button> Log In </button>
-  <br />
-  <br />
+          <button> Log In </button>
+          <br />
+          <br />
 
 
-  <div class="login-logo-div">
-    <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
-    <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
-    <br />
-  </div>
-  <br />
-  <p>
-    Don't have an account?
-    <a href="/signup"> Sign Up </a>
-  </p>
-</form>
+          <div class="login-logo-div">
+            <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
+            <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
+            <br />
+          </div>
+          <br />
+          <p>
+            Don't have an account?
+            <a href="/signup"> Sign Up </a>
+          </p>
+        </form>
+
+</div>
